# Benort

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
benort/: __init__.py  config.py  oss_client.py  project_store.py  template_store.py  views.py
benort/resources_store/Week1/: AT.numbers  Lecture_1-_Statistical_Thermodynamics_01-2025.pptx
benort/templates/: editor.html
temps/: beamer_template.yaml  markdown_default.yaml
